Configure loose coupling via ServiceLoader